# loss_run_process

./: .gitignore  07_Loss_Run_Triage_Spec_v2.docx  README.md  workflow.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 933e8c4f0b04_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/routes/: hitl.py  jobs.py  outputs.py
backend/app/models/: __init__.py
backend/app/pipeline/: graph.py  runner.py
backend/app/pipeline/nodes/: analytics.py  deliver.py  extract.py  hitl_gate.py  ingest.py  normalize.py  redflags.py  summary.py
backend/app/schemas/: claims.py  jobs.py  summary.py
backend/app/services/: gemini_client.py  pdf_generator.py  storage.py
backend/loss_run_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/unit/: test_analytics.py  test_normalize.py  test_phase6_hardening.py  test_redflags.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts  workflow.ts
frontend/src/api/: client.ts  hitl.ts  jobs.ts  outputs.ts
frontend/src/pages/: DocumentsPage.tsx  JobStatusPage.tsx  LoadingPage.tsx  NewJobPage.tsx  ResultPage.tsx  ReviewPage.tsx  UploadPage.tsx
samples/: workflow.md
